[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/icons/icon_augment.svg" type="Texture" id=2]
[ext_resource path="res://components/boss_modifier/boss_modifier.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="BossModifier" type="PanelContainer"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -270.0
margin_right = 270.0
margin_bottom = 62.0
rect_min_size = Vector2( 540, 0 )
rect_pivot_offset = Vector2( 250, 52 )
focus_mode = 2
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 3 )

[node name="H" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 520.0
margin_bottom = 50.0
custom_constants/separation = 8

[node name="Icon" type="TextureRect" parent="H"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="H"]
margin_left = 38.0
margin_right = 492.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Resistance Reduction"
clip_text = true

[node name="Value" type="Label" parent="H"]
margin_left = 500.0
margin_right = 500.0
margin_bottom = 29.0

[node name="Tween" type="Tween" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
